# imgui-rs-vulkan-renderer

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  compile_shaders.ps1  compile_shaders.sh
.github/workflows/: build.yml  publish.yml
assets/fonts/: LICENSE-Dokdo.txt
examples/: collapsing_header.rs  color_button.rs  creating_windows.rs  custom_textures.rs  disablement.rs  draw_list.rs  hello_world.rs  id_wrangling.rs  keyboard.rs  long_list.rs  long_table.rs  multiple_fonts.rs  progress_bar.rs  radio_button.rs  slider.rs  tables_api.rs  test_drawing_channels_split.rs  test_window.rs  test_window_impl.rs  text_callbacks.rs  text_input.rs
examples/common/: mod.rs  vulkan.rs
examples/vulkan/: buffer.rs  mod.rs  texture.rs
src/: error.rs  lib.rs
src/renderer/: allocator.rs  mod.rs  vulkan.rs
src/renderer/allocator/: default.rs  gpu.rs  mod.rs  vkmem.rs
src/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
