[package]
name = "imgui-rs-vulkan-renderer"
description = "A Vulkan renderer for imgui-rs using Ash."
readme = "README.md"
keywords = ["imgui", "vulkan", "ash"]
homepage = "https://github.com/adrien-ben/imgui-rs-vulkan-renderer"
repository = "https://github.com/adrien-ben/imgui-rs-vulkan-renderer"
documentation = "https://docs.rs/imgui-rs-vulkan-renderer"
license = "MIT"
version = "1.5.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

exclude = [
    "assets/*",
    "compile_shaders.*"
]

[dependencies]
thiserror = "1.0"
log = "0.4"
imgui = "^0.8"
ash = { version = ">=0.34, <=0.37", default-features = false, features = ["debug"] }
ultraviolet = "0.9"

gpu-allocator = { version = "0.19", default-features = false, features = ["vulkan"], optional = true }

vk-mem = { version = "0.2", optional = true }

[features]
dynamic-rendering = []

[patch.crates-io]
# Forked version for ash compatibility. Original repo is not maintained anymore.
vk-mem = { git = "https://github.com/adrien-ben/vk-mem-rs", tag = "0.2.3-ash-0.34-0.37" }

[dev-dependencies]
simple_logger = "2.1"
winit = "0.26.0"
imgui = { version = "^0.8", features = ["tables-api"] }
imgui-winit-support = { version = "^0.8", default-features = false, features = ["winit-26"] }
ash = { version = "0.37", default-features = false, features = ["debug", "linked"] }
ash-window = "0.11"
image = "0.24"
imgui-rs-vulkan-renderer = { path = ".", features = ["gpu-allocator"] }
