[package]
name = "imgui-rs-vulkan-renderer"
description = "A Vulkan renderer for imgui-rs using Ash."
readme = "README.md"
keywords = ["imgui", "vulkan", "ash"]
homepage = "https://github.com/adrien-ben/imgui-rs-vulkan-renderer"
repository = "https://github.com/adrien-ben/imgui-rs-vulkan-renderer"
documentation = "https://docs.rs/imgui-rs-vulkan-renderer"
license = "MIT"
version = "1.10.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

exclude = [
    "assets/*",
    "compile_shaders.*"
]

[dependencies]
thiserror = "1.0"
log = "0.4"
imgui = "^0.11"
ash = { version = ">=0.34, <=0.37", default-features = false, features = ["debug"] }
ultraviolet = "0.9"

gpu-allocator = { version = "0.23", default-features = false, features = ["vulkan"], optional = true }

vk-mem = { version = "0.2", optional = true }

[features]
dynamic-rendering = []

[patch.crates-io]
# Forked version for ash compatibility. Original repo is not maintained anymore.
vk-mem = { git = "https://github.com/adrien-ben/vk-mem-rs", tag = "0.2.3-ash-0.34-0.37" }

[dev-dependencies]
simple_logger = "4.0"
winit = "0.27"
imgui = { version = "^0.11", features = ["tables-api"] }
imgui-winit-support = "^0.11"
ash = { version = "0.37", default-features = false, features = ["debug", "linked"] }
ash-window = "0.12"
raw-window-handle = "0.5"
image = "0.24"
imgui-rs-vulkan-renderer = { path = ".", features = ["gpu-allocator"] }
