[package]
name = "imgui-rs-vulkan-renderer"
description = "A Vulkan renderer for imgui-rs using Ash."
readme = "README.md"
keywords = ["imgui", "vulkan", "ash"]
homepage = "https://github.com/adrien-ben/imgui-rs-vulkan-renderer"
repository = "https://github.com/adrien-ben/imgui-rs-vulkan-renderer"
documentation = "https://docs.rs/imgui-rs-vulkan-renderer"
license = "MIT"
version = "1.16.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

include = ["/src", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
thiserror = "1.0"
log = "0.4"
imgui = "^0.12"
ash = { version = "0.38", default-features = false, features = ["debug"] }
ultraviolet = "0.9"

gpu-allocator = { version = "0.27", default-features = false, features = ["vulkan"], optional = true }

vk-mem = { version = "0.4", optional = true }

[features]
dynamic-rendering = []

[dev-dependencies]
simple_logger = "5.0"
winit = "0.29"
imgui = { version = "^0.12", features = ["tables-api"] }
imgui-winit-support = "^0.12"
ash = { version = "0.38", default-features = false, features = ["debug", "linked"] }
ash-window = "0.13"
image = "0.25"
imgui-rs-vulkan-renderer = { path = ".", features = ["gpu-allocator"] }
